[gd_scene load_steps=15 format=2]

[ext_resource path="res://templates/ScrollingBackground/ScrollingBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/fontSmall.tres" type="DynamicFont" id=3]
[ext_resource path="res://templates/Level/Level.gd" type="Script" id=4]
[ext_resource path="res://actors/Enemy/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://templates/Level/GUI.gd" type="Script" id=6]
[ext_resource path="res://templates/Level/hp_bar.png" type="Texture" id=7]
[ext_resource path="res://gui/gui.png" type="Texture" id=8]
[ext_resource path="res://gui/gui_hp.png" type="Texture" id=9]
[ext_resource path="res://gui/gui_addon_hp.png" type="Texture" id=10]

[sub_resource type="LineShape2D" id=1]
normal = Vector2( 1, 0 )

[sub_resource type="LineShape2D" id=2]
normal = Vector2( -1, 0 )

[sub_resource type="LineShape2D" id=3]
normal = Vector2( 0, 1 )

[sub_resource type="LineShape2D" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="ScrollingBackground" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )

[node name="Game" type="Node2D" parent="."]

[node name="Player" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 120, 250 )

[node name="Walls" type="StaticBody2D" parent="Game"]
collision_layer = 16
collision_mask = 33

[node name="WallLeft" type="CollisionShape2D" parent="Game/Walls"]
shape = SubResource( 1 )

[node name="WallRight" type="CollisionShape2D" parent="Game/Walls"]
position = Vector2( 240, 0 )
shape = SubResource( 2 )

[node name="WallTop" type="CollisionShape2D" parent="Game/Walls"]
position = Vector2( 0, 40 )
shape = SubResource( 3 )

[node name="WallBottom" type="CollisionShape2D" parent="Game/Walls"]
position = Vector2( 0, 300 )
shape = SubResource( 4 )

[node name="Enemy" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 120, 30 )
collision_mask = 4

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossStats" type="Control" parent="GUI"]
margin_right = 240.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="GUI/BossStats"]
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "TEST"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBarBackgroud" type="ColorRect" parent="GUI/BossStats"]
margin_right = 240.0
margin_bottom = 5.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="Sprite" parent="GUI/BossStats"]
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 240, 5 )

[node name="PlayerStats" type="Control" parent="GUI"]
margin_left = 240.0
margin_right = 400.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIBackground" type="Sprite" parent="GUI/PlayerStats"]
texture = ExtResource( 8 )
centered = false

[node name="HPBar" type="Sprite" parent="GUI/PlayerStats"]
position = Vector2( 27, 20 )
scale = Vector2( 103, 1 )
texture = ExtResource( 9 )
centered = false

[node name="HPBarOverlay" type="Sprite" parent="GUI/PlayerStats"]
position = Vector2( 27, 24 )
texture = ExtResource( 10 )
centered = false
[connection signal="hitted" from="Game/Player" to="." method="_on_Player_hitted"]
[connection signal="died" from="Game/Enemy" to="Game/Player" method="_on_Enemy_died"]
[connection signal="died" from="Game/Enemy" to="." method="_on_Enemy_died"]
[connection signal="hitted" from="Game/Enemy" to="." method="_on_Enemy_hitted"]
